<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start">

        <include
            android:id="@+id/included_prof_pic"
            layout="@layout/activity_profilepicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>

        <Button
        android:id="@+id/profile_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:icon="@drawable/ic_profile"
        app:iconGravity="textTop"
        app:iconSize="35sp"
        android:layout_marginBottom="200dp"
        android:layout_gravity="end"
        android:gravity="center"
        android:layout_marginRight="5dp"
        android:layout_alignParentEnd="true"
        />
    </RelativeLayout>

    <Button
        android:id="@+id/QA_button"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/QA_button"
        android:textSize="17sp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#88BFD8"
        android:textColor="#fff"
        app:icon="@drawable/ic_question_answer"
        />

    <Button
        android:id="@+id/play_button"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:textSize="17sp"
        android:text="@string/play_button"
        app:icon="@drawable/ic_videogame_asset"
        android:layout_marginBottom="200dp"
        />

    <Button
        android:id="@+id/nightmode_button"
        android:layout_width="180dp"
        android:backgroundTint="#555555"
        android:textColor="#fff"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        app:icon="@drawable/ic_night_mode"
        android:text="@string/nightmode"
        />

</LinearLayout>